<resources>
    <string name="app_name">Digikala</string>
    <string name="no_browser_found">مرورگری پیدا نشد</string>
    <string name="price_text">%1$s تومان</string>
    <string name="top_sale_title_text_view">محصولات پرفروش</string>
    <string name="newest_product_title_text_view">جدیدترین محصولات</string>
    <string name="colon">:</string>
    <string name="doubleZero">00</string>
    <string name="full_list_text">لیست کامل</string>
    <string name="filter_text_view">فیلتر کردن</string>
    <string name="filter_types_text_view">رنگ، نوع، قیمت و …</string>
    <string name="sort_text_view">مرتب کردن</string>
    <string name="sort_type_text_view">پر فروش ترین</string>
    <string name="special_offer_red_box_text">پیشنهاد ویژه</string>
    <string name="users_comments">نظرات کاربران</string>
    <string name="product_description">مشخصات</string>
    <string name="color">رنگ</string>
    <string name="color_count">%1$d رنگ</string>
    <string name="size">سایز</string>
    <string name="size_count">%1$d سایز</string>
    <string name="add_to_basket">افزودن به سبد خرید</string>
    <string name="num_of_sellers">%1$s فروشنده و گارانتی برای این کالا وجود دارد</string>
    <string name="seller_info">فروش توسط %1$s</string>
    <string name="seller_info_with_detail">فروش توسط %1$s | رضایت خرید: %2$s</string>
    <string name="product_rate_count">از مجموع %1$s رای ثبت شده</string>
    <string name="product_rate">%1$.1f از 5</string>
    <string name="continue_description">ادامه مطلب</string>
    <string name="close_description">بستن</string>
    <string name="share_link">https://vtpd.adj.st/?adjust_t=mk5b2y&amp;adjust_deeplink=dkapp%3A%2F%2Fwww.digikala.com%2FProduct%2Fdkp-PRODUCTID&amp;adjust_redirect=https://www.digikala.com/Product/dkp-PRODUCTID</string>
    <string name="share_title">اشتراک محصول</string>
</resources>
