<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="product"
            type="ir.samadipour.digikala.service.models.ProductData" />

        <variable
            name="productConfig"
            type="ir.samadipour.digikala.service.models.ProductConfigData" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_background"
        tools:context=".view.activities.ProductDetailActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FAFAFA"
                app:cardElevation="3dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">

                        <com.smarteist.autoimageslider.SliderView
                            android:id="@+id/imageSlider_productDetail"
                            android:layout_width="match_parent"
                            android:layout_height="336dp"
                            android:overScrollMode="always"
                            android:paddingBottom="4dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:sliderAnimationDuration="600"
                            app:sliderAutoCycleEnabled="false"
                            app:sliderCircularHandlerEnabled="false"
                            app:sliderIndicatorAnimationDuration="200"
                            app:sliderIndicatorGravity="center_horizontal|bottom"
                            app:sliderIndicatorMargin="5dp"
                            app:sliderIndicatorOrientation="horizontal"
                            app:sliderIndicatorPadding="3dp"
                            app:sliderIndicatorRadius="0.95dp"
                            app:sliderIndicatorSelectedColor="@color/dg_red"
                            app:sliderIndicatorUnselectedColor="#20666464"
                            app:sliderStartAutoCycle="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/red_background_special_offer"
                            android:gravity="center"
                            android:padding="1dp"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="@string/special_offer_red_box_text"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="normal"
                            android:visibility="@{product.specialOffer? View.VISIBLE : View.GONE}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#70CCCCCC" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/share_productDetail"
                            android:layout_width="27dp"
                            android:layout_height="27dp"
                            android:layout_marginEnd="10dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:layoutDirection="rtl"
                            android:padding="4dp"
                            android:src="@drawable/ic_share"
                            android:tint="#9E9E9E" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/bell_productDetail"
                            android:layout_width="27dp"
                            android:layout_height="27dp"
                            android:layout_marginEnd="25dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:layoutDirection="rtl"
                            android:padding="4dp"
                            android:src="@drawable/ic_bell"
                            android:tint="#9E9E9E"
                            android:visibility="@{product.specialOffer ? View.GONE : View.VISIBLE}" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/heart_productDetail"
                            android:layout_width="27dp"
                            android:layout_height="27dp"
                            android:layout_marginEnd="25dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:layoutDirection="rtl"
                            android:padding="4dp"
                            android:src="@drawable/ic_heart"
                            android:tint="#9E9E9E" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/vazirmedium"
                        android:gravity="right"
                        android:maxLines="2"
                        android:padding="3dp"
                        android:text="@{product.faTitle}"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        tools:text="اسم کالا" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="2dp" />

                    <TextView
                        android:id="@+id/productEnTitleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="6dp"
                        android:fontFamily="@font/vazirbold"
                        android:gravity="right"
                        android:maxLines="2"
                        android:text="@{product.enTitle}"
                        android:textColor="#9E9E9E"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        tools:text="English Title" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="@{product.specialOffer ? View.VISIBLE : View.GONE}">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:paddingStart="15dp">

                            <TextView
                                android:id="@+id/hourCounter_productTextView"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:background="@drawable/background_timer"
                                android:fontFamily="@font/vazirbold"
                                android:gravity="center"
                                android:text="@string/doubleZero"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/vazirbold"
                                android:gravity="center"
                                android:paddingLeft="3dp"
                                android:paddingRight="3dp"
                                android:text="@string/colon"
                                android:textColor="#383838"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/minuteCounter_productTextView"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:background="@drawable/background_timer"
                                android:fontFamily="@font/vazirbold"
                                android:gravity="center"
                                android:text="@string/doubleZero"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/vazirbold"
                                android:gravity="center"
                                android:paddingLeft="3dp"
                                android:paddingRight="3dp"
                                android:text="@string/colon"
                                android:textColor="#383838"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/secondCounter_productTextView"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:background="@drawable/background_timer"
                                android:fontFamily="@font/vazirbold"
                                android:gravity="center"
                                android:text="@string/doubleZero"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:paddingStart="45dp"
                            android:src="@drawable/typeface_specialoffer" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="13dp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>


            <!--     222222222222222       -->
            <!--     222222222222222       -->
            <!--     222222222222222       -->
            <!--     222222222222222       -->
            <!--     222222222222222       -->
            <!--     222222222222222       -->
            <!--     222222222222222       -->
            <!--     222222222222222       -->
            <!--     222222222222222       -->
            <!--     222222222222222       -->


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:gravity="center"
                        android:layoutDirection="rtl"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:padding="5dp"
                            android:src="@drawable/ic_clipboard"
                            android:tint="#9FA7AF" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazirbold"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/product_description"
                            android:textColor="#657881"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:layoutDirection="rtl"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:padding="5dp"
                            android:src="@drawable/ic_chat"
                            android:tint="#9FA7AF" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/vazirbold"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/users_comments"
                            android:textColor="#657881"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--      3333333333333      -->
            <!--      3333333333333      -->
            <!--      3333333333333      -->
            <!--      3333333333333      -->
            <!--      3333333333333      -->
            <!--      3333333333333      -->
            <!--      3333333333333      -->
            <!--      3333333333333      -->
            <!--      3333333333333      -->
            <!--      3333333333333      -->
            <!--      3333333333333      -->

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>